[package]
name = "hellodml"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_AI_MachineLearning_DirectML",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
]

[features]
dxdebug = []